Fix: hide everything when screen is too small.

--- a/Apps/Client/src/App.scss
+++ b/Apps/Client/src/App.scss
@@ -26,6 +26,11 @@
     width: 100%;
     min-height: 100%;
 
+    // Hide everything when screen is too small
+    @media (max-width: $min-width) {
+      display: none !important;
+    }
+
     @include desktop {
       height: 100%;
     }
